@@ -123,7 +123,7 @@ Set the current session name to
 .
 .It Fl ui Ar type
 Select the user interface type, which can be
-.Em ncurses ,
+.Em terminal ,
 .Em dummy ,
 or
 .Em json .
